[metadata]
name = chrononav
version = 0.1.1
author = Vivek Khatri
author_email = vvk3785@gmail.com
description = A sleek CLI for timezone conversions with ASCII art and rich tables.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vivek378521/chrononav
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console

[options]
packages = find:
python_requires = >=3.7
install_requires =
    typer[all]>=0.9.0
    rich>=13.0.0
    pytz>=2022.1
    pyfiglet>=0.8.post1
    python-dateutil>=2.8.2

[options.entry_points]
console_scripts =
    chrononav = chrononav.main:app